<resources>
    <string name="app_name">CardCollection</string>

    <string name="hebe">hebe</string>
    <string name="ladybug">Moja Biedronka</string>
    <string name="spolem_bialystok">PSS Społem Białysok</string>
    <string name="yves_rocher">YVES ROCHER FRANCE</string>
    <string name="my_empik">moj empik</string>
    <string name="super_pharm">SUPER-PHARM</string>
    <string name="inglot">INGLOT</string>
    <string name="deichmann_plus">deichmann plus</string>

    <string-array name="choose_card">
        <item>@string/hebe</item>
        <item>@string/ladybug</item>
        <item>@string/spolem_bialystok</item>
        <item>@string/yves_rocher</item>
        <item>@string/my_empik</item>
        <item>@string/super_pharm</item>
        <item>@string/inglot</item>
        <item>@string/deichmann_plus</item>
    </string-array>


    <string name="list_card">Lista kart</string>
    <string name="add_card">Dodaj kartę</string>
    <string name="settings">Ustawienia</string>
    <string name="about_app">O aplikacji</string>
    <string name="name_card">Nazwa Karty</string>
    <string name="number_card">Numer Karty</string>
    <string name="choose_category">Wybierz kategorie</string>
    <string name="set_favorite_card">Moja ulubiona</string>
    <string name="scan_card">Skanuj kartę</string>
    <string name="enter_card">Podaj nazwę karty</string>

    <string name="enter_name_category">Podaj nazwę kategorii</string>
    <string name="add_category">Dodaj kategorię</string>
    <string name="delete_card">Usuń kartę</string>
    <string name="category_card">Kategoria Karty</string>

</resources>